@@ -1,4 +1,4 @@
-# $NetBSD: mi,v 1.819 2005/08/28 19:37:58 thorpej Exp $
+# $NetBSD: mi,v 1.820 2005/09/05 18:54:10 kiyohara Exp $
 ./etc/mtree/set.man				man-sys-root
 ./usr/share/info/am-utils.info			man-amd-info		info
 ./usr/share/info/as.info			man-computil-info	bfd,info
@@ -873,6 +873,7 @@
 ./usr/share/man/cat4/hpcsh/intro.0		man-sys-catman		.cat
 ./usr/share/man/cat4/hpcsh/j6x0lcd.0		man-sys-catman		.cat
 ./usr/share/man/cat4/hpcsh/j6x0tp.0		man-sys-catman		.cat
+./usr/share/man/cat4/hpcsh/psh3lcd.0		man-sys-catman		.cat
 ./usr/share/man/cat4/hpcsh/psh3tp.0		man-sys-catman		.cat
 ./usr/share/man/cat4/hptide.0			man-sys-catman		.cat
 ./usr/share/man/cat4/i386/PCIBIOS.0		man-sys-catman		.cat
@@ -3133,6 +3134,7 @@
 ./usr/share/man/man4/hpcsh/intro.4		man-sys-man		.man
 ./usr/share/man/man4/hpcsh/j6x0lcd.4		man-sys-man		.man
 ./usr/share/man/man4/hpcsh/j6x0tp.4		man-sys-man		.man
+./usr/share/man/man4/hpcsh/psh3lcd.4		man-sys-man		.man
 ./usr/share/man/man4/hpcsh/psh3tp.4		man-sys-man		.man
 ./usr/share/man/man4/hptide.4			man-sys-man		.man
 ./usr/share/man/man4/i386/PCIBIOS.4		man-sys-man		.man
